New comment line (test)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
+<!-- New comment -->
     <div id="pre-loader">
         <div class="loader-wrapper">
             <div class="loader-p1"></div>
